fixed overflow on title

--- a/styles/Title.module.css
+++ b/styles/Title.module.css
@@ -3,8 +3,7 @@
   /* width: 100%; */
   /*max-width: 22rem;*/
   overflow-x: hidden;
-  top: 1%;
-  left: 2%;
+  padding: 1rem;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -17,8 +16,6 @@
 @media only screen and (max-width: 480px) {
   .main {
     max-width: 100vw;
-    top: 1%;
-    left: 5%;
     /*font-size: 80pt;*/
   }
 
